--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "firebase": "^7.2.3",
+    "geofire": "^5.0.1",
+    "jest": "^24.9.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
