--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "expo": "^35.0.0",
     "firebase": "^7.2.3",
-    "geofire": "^5.0.1",
+    "geofirestore": "^3.3.1",
     "jest": "^24.9.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
