--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-paper": "^3.1.1",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.10.3"
+    "react-navigation-stack": "^1.10.3",
+    "expo-image-picker": "~7.0.0"
   },
   "devDependencies": {
     "@types/react": "^16.8.23",
