--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-native-image-resizer": "^1.1.0",
     "react-native-maps": "~0.25.0",
     "react-native-paper": "^3.1.1",
-    "react-native-reanimated": "^1.4.0",
+    "react-native-reanimated": "~1.2.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
