--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "expo-image-picker": "~7.0.0",
     "firebase": "^7.2.3",
     "geofirestore": "^3.3.1",
     "jest": "^24.9.0",
@@ -26,11 +27,12 @@
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
-    "expo-image-picker": "~7.0.0"
+    "validator": "^12.0.0"
   },
   "devDependencies": {
     "@types/react": "^16.8.23",
     "@types/react-native": "^0.57.65",
+    "@types/validator": "^10.11.3",
     "babel-preset-expo": "^7.0.0",
     "typescript": "^3.4.5"
   },
